test/types/integral/integralvariable2.good
integralvariable2.chpl:1: error: Cannot default-initialize a variable with generic type
integralvariable2.chpl:1: note: 'r' has generic type 'integral'
